# rust-egui-seven-tasks

./: Cargo.toml  LICENSE  README.ipynb  README.md
img/: task1.mov  task2.mov  task3.mov  task4.mov
src/: fifth.rs  first.rs  fourth.rs  second.rs  third.rs
